@@ -1797,21 +1797,23 @@ MagickExport MagickBooleanType CompositeImageChannel(Image *image,
       value=GetImageArtifact(composite_image,"compose:args");
       if (value != (char *) NULL)
         flags=ParseGeometry(value,&geometry_info);
-      if ((flags & WidthValue) == 0 )
-        {
+      if ((flags & WidthValue) == 0 ) {
           destination_image=DestroyImage(destination_image);
           return(MagickFalse);
         }
-      width=geometry_info.rho;
-      height=geometry_info.sigma;
-      blur.x1=geometry_info.rho;
+      /* Width and height of ellipse.
+         Note: The Gaussian Filter uses a sigma = 0.5, so to compensate the
+         input sigma must be doubled to give a correct 'area to resample'.
+      */
+      width=height=geometry_info.rho*2.0;
+      if ((flags & HeightValue) != 0 )
+        height=geometry_info.sigma*2.0;
+      /* default the unrotated ellipse width and height axis vectors */
+      blur.x1=width;
       blur.x2=0.0;
       blur.y1=0.0;
-      blur.y2=geometry_info.sigma;
-      angle_start=0.0;
-      angle_range=0.0;
-      if ((flags & HeightValue) == 0)
-        blur.y2=blur.x1;
+      blur.y2=height;
+      /* rotate vectors if a rotation angle is given */
       if ((flags & XValue) != 0 )
         {
           MagickRealType
@@ -1823,6 +1825,9 @@ MagickExport MagickBooleanType CompositeImageChannel(Image *image,
           blur.y1=(-height*sin(angle));
           blur.y2=height*cos(angle);
         }
+      /* otherwise lets set a angle range and calculate in the loop */
+      angle_start=0.0;
+      angle_range=0.0;
       if ((flags & YValue) != 0 )
         {
           angle_start=DegreesToRadians(geometry_info.xi);
@@ -1830,11 +1835,18 @@ MagickExport MagickBooleanType CompositeImageChannel(Image *image,
         }
       /*
         Blur Image by resampling.
+
+        FUTURE: this is currently broken, especially for small sigma blurs
+        This needs to be fixed to use a non-user filter setup that provides
+        far more control than currently available.
+
+        It should also be set to GaussianFilter, but it is not being effected
+        by ScaleResampleFilter() for some reason.
       */
       pixel=zero;
       exception=(&image->exception);
       resample_filter=AcquireResampleFilter(image,&image->exception);
-      SetResampleFilter(resample_filter,GaussianFilter,1.0);
+      SetResampleFilter(resample_filter,CubicFilter,1.0);
       composite_view=AcquireVirtualCacheView(composite_image,exception);
       destination_view=AcquireAuthenticCacheView(destination_image,exception);
       for (y=0; y < (ssize_t) composite_image->rows; y++)
@@ -1882,11 +1894,16 @@ MagickExport MagickBooleanType CompositeImageChannel(Image *image,
               blur.y1=(-height*sin(angle));
               blur.y2=height*cos(angle);
             }
-          ScaleResampleFilter(resample_filter,blur.x1*QuantumScale*
-            GetPixelRed(p),blur.y1*QuantumScale*
-            GetPixelGreen(p),blur.x2*QuantumScale*
-            GetPixelRed(p),blur.y2*QuantumScale*
-            GetPixelGreen(p));
+#if 0
+          if ( x == 60 && y == 60 )
+            fprintf(stderr, "blur.x=%lf,%lf, blur.y=%lf,%lf\n",
+                blur.x1, blur.x2, blur.y1, blur.y2);
+#endif
+          ScaleResampleFilter(resample_filter,
+               blur.x1*QuantumScale*GetPixelRed(p),
+               blur.y1*QuantumScale*GetPixelGreen(p),
+               blur.x2*QuantumScale*GetPixelRed(p),
+               blur.y2*QuantumScale*GetPixelGreen(p) );
           (void) ResamplePixelColor(resample_filter,(double) x_offset+x,
             (double) y_offset+y,&pixel);
           SetPixelPacket(destination_image,&pixel,r,destination_indexes+x);
