@@ -1,5 +1,7 @@
 2012-04-23  6.7.6-8 Anthony Thyssen <A.Thyssen@griffith...>
   * Added the RobidouxSharp filter (originally defined Dec 2011)
+  * Fixed Variable Blur - incorrect blur area calculation
+    Also Gaussian is sampling proerly. Substitute the faster Cubic for now.
 
 2012-04-21  6.7.6-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.6-7, SVN revision 7587.
